Fixed up WholeBodyTrajectoryToolboxOutputStatus methods.